2018-06-13 Ben Shi <powerstudio1st AT 163 DOT com>

	* support/regression/tests/bug-2756.c:
	  disabled for test-mcs51-large and test-mcs51-huge due to build failure.

2018-06-13 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCset.c: reduce memory use of unionSets()

2018-06-12 Ben Shi <powerstudio1st AT 163 DOT com>

	* support/regression/tests/bug-2756.c:
	  disabled for test-host.

2018-06-12 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCralloc.hpp,
	  support/regression/tests/bug-2756.c:
	  Fix main issue in bug #2756.

2018-06-12 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/ralloc.c: fix bug #2737

2018-06-11 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCbitv.c: fix bug #2759
	* src/SDCCglue.c: fix bug #2749
	* support/regression/tests/bug-2749: enable test

2018-06-11 Ben Shi <powerstudio1st AT 163 DOT com>

	* support/regression/tests/literalop.c:
	  Improved for aarch64.

2018-06-10 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCbitv.c,
	* src/SDCCbitv.h: simplify to only access bit vector as unsigned
	  int, add functions for in-place intersection and union operations
	* src/SDCCset.c,
	* src/SDCCset.h: new function destructItemIf calls a destructor
	  function before deleting a set item
	* src/SDCCBBlock.c,
	* src/SDCCBBlock.h,
	* src/SDCCopt.c: free some eBBlock data when switching to iCode chain
	* src/SDCCcflow.c: free code flow data when not needed
	* src/SDCCdflow.c,
	* src/SDCCcse.c,
	* src/SDCCcse.h: free data flow and CSE data when not needed

2018-06-08 Ben Shi <powerstudio1st AT 163 DOT com>

	* support/regression/tests/bitwise.c:
	  Improved for aarch64.

2018-06-08 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/ralloc.c,
	  src/SDCCopt.c:
	  Narrow reads from pointers, RFE #559.
	* doc/sdccman.lyx:
	  Improve documentation for --stack-loc.

2018-06-06 Ben Shi <powerstudio1st AT 163 DOT com>

	* sim/ucsim/config.guess: